--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -48,12 +48,10 @@
           <thead>
             <tr>
               <th></th>
-              <th>Number</th>
               <th>Tracking No</th>
               <th>Description</th>
               <th>Type</th>
               <th>Weight</th>
-              <th>Dimensions</th>
               <th>Status</th>
               <th>AWB</th>
               <th></th>
@@ -66,25 +64,22 @@
               <td>
                 <input type="checkbox" class="package-select" />
               </td>
-              <td>PK<%= pkg.id%></td>
               <td><%= pkg.trackingNo%></td>
               <td><%= pkg.description %></td>
               <td><%= pkg.packageType %></td>
               <td><%= pkg.weight%></td>
-              <td><%= pkg.dimensions %></td>
               <td class="lastStatusText_field"><%= pkg.lastStatusText %></td>
               <td><%= pkg.awbId.awbId %></td>
               <td><a href="../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a></td>
-              <td class="text-center">
+              <td>
                 <a
                   class="btn btn-link btn-primary btn-print-pkg"
                   data-toggle="modal"
                   data-id="<%=pkg._id%>"
                   data-original-title="Print Label"
                   data-target="#print-popup"
-                >
-                  <i class="fa fa-print"></i>
-                </a>
+                ><i class="fa fa-print"></i>
+              </a>
               </td>
             </tr>
             <%})%>
