--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -22,6 +22,12 @@
 						<p>Dashboard </p>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/report/')) { %> active <% } %>">
+					<a href="/report">
+						<i class="fa fa-map-marker-alt"></i>
+						<p>Reports </p>
+					</a>
+				</li>
 				<% if (helpers.checkRole(user.roles, "Admin")) { %>
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
