--- a/views/pages/fleet/pilot/list.ejs
+++ b/views/pages/fleet/pilot/list.ejs
@@ -14,7 +14,7 @@
               <th>Company</th>
               <th>Mobile</th>
               <th>Email</th>
-              <th>Warehouse</th>
+              <!-- <th>Warehouse</th> -->
               <th></th>
             </tr>
           </thead>
@@ -25,7 +25,7 @@
               <td><%= pilot.company%></td>
               <td><%= pilot.mobile%></td>
               <td><%= pilot.email%></td>
-              <td><%= pilot.warehouse%></td>
+              <!-- <td><%= pilot.warehouse%></td> -->
               <td>
                 <a href='manage/<%=pilot.id%>/get'><i class="fas fa-user-edit"></i></a>
                 <a href="#" class='rm-pilot ml-3' data-id='<%=pilot.id%>' data-toggle='modal' data-target='#confirmDel'>
