--- a/views/pages/fleet/pilot/edit.ejs
+++ b/views/pages/fleet/pilot/edit.ejs
@@ -47,7 +47,7 @@
             else.</small>
         </div>
       </div>
-      <div class="form-group form-show-validation row">
+      <!-- <div class="form-group form-show-validation row">
         <label for="warehouse" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Warehouse </label>
         <div class="col-lg-4 col-md-9 col-sm-8">
           <select class="form-control" id="warehouse" name="warehouse" required>
@@ -56,7 +56,7 @@
             <option value="nas" <% if(pilot.warehouse== "nas") { %> selected <% } %>>Warehouse NAS</option>
           </select>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="card-action">
       <div class="row">
