--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -24,6 +24,7 @@
                     <th>AWB Number</th>
                     <th>Consignee</th>
                     <th>Shipper</th>
+                    <th>Driver</th>
                     <th>Carrier</th>
                     <th>Pieces</th>
                     <th>Weight</th>
@@ -39,6 +40,7 @@
                     <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
                     <td><%=helpers.getFullName(awb.customer)%></td>
                     <td><%=awb.shipper.name %></td>
+                    <td><%=awb.driver ? awb.driver.firstName +' ' + awb.driver.lastName:''%></td>
                     <td><%=awb.carrier.name %></td>
                     <td><%=awb.packages.length %></td>
                     <td><%=awb.weight %> lbs</td>
